runtime method_t二刷

--- a/读书笔记/iOS自学笔记/知识小集00 - OC基础.md
+++ b/读书笔记/iOS自学笔记/知识小集00 - OC基础.md
@@ -196,15 +196,32 @@ A *a = [[A alloc]init];
 
 #### Runtime 基础数据结构
 * 先来分析一下runtime的基础数据结构，从数据结构中了解OC的部分运行时特性：
-  OC中所有的对象都是id类型，id类型在runtime时被编译为objc_object结构体，objc_object包含了一个isa指针。OC中类对象Class在runtime中被编译成objc_class结构体，objc_class继承自objc_object。objc_class包含一个superClass指针，一个cache_t结构体，一个class_data_bits_t结构体。cache_t是一个可增量扩展的哈希表结构，它里面的每一个元素是bucket_t的结构体，bucket_t结构体里包含一个key和一个IMP。class_data_bits_t是对class_rw_t结构体的封装，class_rw_t里包含一个class_ro_t结构体、一个protocols二维数组、一个properties二维数组、一个methods二维数组。class_ro_t里包含一个name、一个ivars数组、一个protocols数组、一个properties数组、一个methods数组。methods数组里是一个method_t的结构体，method_t里包含一个SEL、IMP、const char*类型的字符串。
+  OC中所有的对象都是id类型，id类型在runtime时被编译为objc_object结构体，objc_object包含了一个isa指针。OC中类对象Class在runtime中被编译成objc_class结构体，objc_class继承自objc_object。objc_class包含一个superClass指针，一个cache_t结构体，一个class_data_bits_t结构体。cache_t包含一个可增量扩展的数组，这个数组就是散列表，它里面的每一个元素是bucket_t的结构体，bucket_t结构体里包含一个key（其实就是SEL）和一个IMP。class_data_bits_t是对class_rw_t结构体的封装，class_rw_t里包含一个class_ro_t结构体、一个protocols二维数组、一个properties二维数组、一个methods二维数组。class_ro_t里包含一个name、一个ivars数组、一个protocols数组、一个properties数组、一个methods数组。methods数组里是一个method_t的结构体，method_t里包含一个SEL、IMP、const char*类型的字符串。
 
 * 注意几个关键词：
-  * isa指针是指向当前对象所属的类。它分为指针型isa和非指针型isa。指针型isa的所有数据都用于存储所属类的地址，非指针型的isa只有部分内容用来存储所属类的地址。我们可以说含有isa指针的结构体都是对象，比如说runloop、block等。其次，类也是一种对象，因为它继承自objc_object，称之为类对象。所以isa的指向就包括：实例对象的isa指向类对象，类对象的isa指针指向元类，元类的isa指针指向根元类，根元类的isa指针指向它本身
+  * isa指针是指向当前对象所属的类。它分为指针型isa和非指针型isa。指针型isa的所有数据都用于存储所属类的地址，非指针型的isa只有部分内容用来存储所属类的地址。我们可以说含有isa指针的结构体都是对象，比如说runloop、block等。其次，类也是一种对象，因为它继承自objc_object，称之为类对象。所以isa的指向就包括：实例对象的isa指向类对象，类对象的isa指针指向元类，元类的isa指针指向根元类，根元类的isa指针指向它本身。
+
+    （MJ版本：isa_t是一个**联合体**，所谓联合体就是里面的成员共享一整块内存区域。联合体里面通常包含一个变量和一个结构体，结构体与变量共用一个内存区域，结构体使用**位域**的形式来标识其每个成员所占用的变量的字节区域。比如isa，整个是一个64位的变量，结构体里的每一个成员都占用其不同的位数，比如mark占第一位、isassociate占第二位、类地址占其中32位等）。
+
   * 类对象的superClass指针指向父类对象，元类对象的superClass指针指向父类的元类，根元类的superClass指针指向NSObject，NSObject的superClass指针为nil；
-  * cache_t 是一个用于快速查找方法执行函数。它是一个可增量扩展的哈希表结构。是计算机局部性原理的应用；runtime通过key进行hash算法定位到对应的bucket_t，然后获取IMP。
+
+  * cache_t **使用散列表**来缓存曾经调用过的方法，可以提高方法查找速度。是**计算机局部性原理**的应用；runtime通过key进行hash算法定位到对应的bucket_t，然后获取IMP。
+
+  * method_t中，SEL是函数名（需要注意的是：不同类中相同名字的方法，所对应的方法选择器是相同的）；const char *是一个满足typecoding标准的字符串。
+
+    ```
+    -(int)test:(int)a b:(float)b { return 0; }
+    这个函数的const char * 就是："i24@0:8i16f20"
+    首先我们知道test函数实际还隐藏了两个参数，真实的test方法应该是：
+    -(int)test:(id)self _cmd:(SEL)_cmd a:(int)a b:(float)b;
+    "i24@0:8i16f20" : i表示返回值是int类型、24表示所有参数共占用24个字节、@表示self、0表示id指针是从整体参数的第0个字节开始、:表示SEL、8表示SEL指针是从整体参数的第8个字节开始、i表示参示int、16表示int参数是从整体参数的第16个字节开始、f表示float、20表示float参数是从整体参数的第20个字节开始的。
+    ```
 
 * 几个重要的点：
   * 1、class_rw_t里的二维数组实际是对应category里的protocols、properties、methods。每一个category对应一个元素。所以方法查找时会先查找category里的方法；而class_ro_t是指只读的相关数据，也就是说已编译好的对象是无法在通过分类添加成员变量的。在class_rw_t的方法列表中查找时，对于已排到的使用二分法查找，对于没有排序的直接遍历查找。
+
+    （MJ版本：在runtime的时候，bits_data先是存储ro_t里类的原始数据，在运行时，会将ro里的方法、属性、协议拷贝到rw中，然后再添加category里的方法、属性、协议。也就是说rw中的二维数组不止分类添加的，也包括类原理的方法、属性、协议）。
+
   * 2、superClass指针的指向代表了方法查找的过程。也就是说对于实例方法，会沿着类对象的方法列表（此处先省略缓存查找等细节）进行查找，找不到就查找父类的方法列表，最后找的NSObject。而类方法的查找是在元类的方法列表中进行查找，以此往上查找，找的根元类的时候，如果根元类也没有实现，而由于根元类的superClass指针指向NSObject，所以又会查找NSObject对应的实例方法。所以如果一个类没有实现对应的类方法，但是**NSObject**实现了相同名称的实例方法，那么调用类方法时，则最终会调用到NSObject的同名实例方法。（注意，这里的实例方法必须是NSObject实现的。自身类没有实现类方法，实现了同名的实例方法，也是会崩溃的）
 
 #### Runtime涉及的事件
@@ -668,7 +685,7 @@ _ timer = [NSTimer scheduledTimerWithTimeInterval:1.0f target: _ hzProxy selecto
 	* 第2位：表示当前对象是否有管理对象——Association；
 	* 第3位：表示是否使用ARC进行内存管理；
 	* 第4~33位：表示当前对象所指向的类对象的地址；
-	* 第34~40位：表示是否完成初始化；
+	* 第34~40位：magic数据，表示是否完成初始化；
 	* 第41位：表示是否有弱引用指针；
 	* 第42位：是否正在执行deallocating操作；
 	* 第43位：表示当前对象是否外挂散列表；
