--- a/读书笔记/面试题精选/面练——各理论常考题.md
+++ b/读书笔记/面试题精选/面练——各理论常考题.md
@@ -217,4 +217,6 @@ Person和Student对象各占多少空间？
 * 什么是Runtime？平时项目中有用过么？
 * super与self的关系
 * isKindOfClass和isMemberOfClass的区别？
-* 
+* isa_t：什么是联合体？什么是掩码？isa中都包含哪些东西？
+* method_t的结构是什么样的？怎么表示返回值和参数？
+* cache_t中散列表的底层原理是什么？
