runtime cache_t及散列表底层实现2刷

--- a/读书笔记/面试题精选/面练——各理论常考题.md
+++ b/读书笔记/面试题精选/面练——各理论常考题.md
@@ -213,10 +213,26 @@ Person和Student对象各占多少空间？
 ### runtime
 
 * 讲一下OC的消息机制
+
 * 消息转发机制流程
+
 * 什么是Runtime？平时项目中有用过么？
+
 * super与self的关系
+
 * isKindOfClass和isMemberOfClass的区别？
+
 * isa_t：什么是联合体？什么是掩码？isa中都包含哪些东西？
+
 * method_t的结构是什么样的？怎么表示返回值和参数？
+
 * cache_t中散列表的底层原理是什么？
+
+  Cache_t的结构体中含有一个包含bucket_t的散列表（也是一个数组），还有一个mask（这个mask是数组的长度减一，也就是最大的下标值，因为做&操作，得出来的结构都不可能超过mask，所以使用最大下标值做mask是最合适的）。当cache_t进行函数查找时，首先会拿到key（也就是SEL）和mask做&操作，得到一个下标索引。然后去散列表里找到对应的位置，如果该位置没有值，则直接将bucket_t存放进去；如果有值，则对下标进行减一操作，再查看，然后存进去。
+
+  散列表通过哈希算法计算下标，加快了查找速度，即使是最坏情况也只是将整个散列表遍历一遍。其次它是拿空间换时间的做法，因为在一开始是需要先开辟一个大小为mask+1的空数组。
+
+  其次一旦散列表放不下了，那么就会进行扩容，从源码中可以知道，新的空间是原来空间的2倍。所以这一扩容，mask的值势必改变，mask改变的话，以前所有的哈希算法都将失效，所以就会把原理数组里的所有元素都清空掉。
+
+* 方法查找过程是什么？
+* 
