runtime API  二刷

--- a/读书笔记/面试题精选/面练——各理论常考题.md
+++ b/读书笔记/面试题精选/面练——各理论常考题.md
@@ -235,4 +235,39 @@ Person和Student对象各占多少空间？
   其次一旦散列表放不下了，那么就会进行扩容，从源码中可以知道，新的空间是原来空间的2倍。所以这一扩容，mask的值势必改变，mask改变的话，以前所有的哈希算法都将失效，所以就会把原理数组里的所有元素都清空掉。
 
 * 方法查找过程是什么？
-* 
+
+* super关键字的方法调用底层原理是什么？下面打印结果是什么
+
+  ```
+  @interface Person
+  @end
+  @interface Student : Person 
+  @end
+  @implemention
+  -(void)print {
+      NSLog(@"%@", [self class]);	//Student
+      NSLog(@"%@", [self superclass]);	//Person
+      
+      NSLog(@"%@", [super class]);	//Student
+      NSLog(@"%@", [super superclass]);	//Person
+  }
+  @end
+  ```
+
+  
+
+* isKindOfClass & isMembberOfClass 的区别？下面代码打印结果是什么？为什么？
+
+  ```
+  BOOL res1 = [(id)[NSObject class] isKindOfClass:[NSObject class]]; //YES
+      BOOL res2 = [(id)[NSObject class] isMemberOfClass:[NSObject class]]; //NO
+      BOOL res3 = [(id)[Test2 class] isKindOfClass:[Test2 class]]; //NO
+      BOOL res4 = [(id)[Test2 class] isMemberOfClass:[Test2 class]]; //NO
+  
+      BOOL res5 = [[NSObject new] isKindOfClass:[NSObject class]]; //YES
+      BOOL res6 = [[NSObject new] isMemberOfClass:[NSObject class]]; //YES
+      BOOL res7 = [[Test2 new] isKindOfClass:[Test2 class]]; //YES
+      BOOL res8 = [[Test2 new] isMemberOfClass:[Test2 class]]; //YES
+  ```
+
+  
