--- a/读书笔记/iOS自学笔记/知识小集00 - OC基础.md
+++ b/读书笔记/iOS自学笔记/知识小集00 - OC基础.md
@@ -196,14 +196,14 @@ A *a = [[A alloc]init];
 
 #### Runtime 基础数据结构
 * 先来分析一下runtime的基础数据结构，从数据结构中了解OC的部分运行时特性：
-  OC中所有的对象都是id类型，id类型在runtime时被编译为objc_object结构体，objc_object包含了一个isa指针。OC中类对象Class在runtime中被编译成objc_class结构体，objc_class继承自objc_object。objc_class包含一个superClass指针，一个cache_t结构体，一个class_data_bits_t结构体。cache_t包含一个可增量扩展的数组，这个数组就是散列表，它里面的每一个元素是bucket_t的结构体，bucket_t结构体里包含一个key（其实就是SEL）和一个IMP。class_data_bits_t是对class_rw_t结构体的封装，class_rw_t里包含一个class_ro_t结构体、一个protocols二维数组、一个properties二维数组、一个methods二维数组。class_ro_t里包含一个name、一个ivars数组、一个protocols数组、一个properties数组、一个methods数组。methods数组里是一个method_t的结构体，method_t里包含一个SEL、IMP、const char*类型的字符串。
+  OC中所有的对象都是id类型，id类型在runtime时被编译为objc_object结构体，objc_object包含了一个isa指针。OC中类对象Class在runtime中被编译成objc_class结构体，objc_class继承自objc_object。objc_class包含一个super_class指针，一个cache_t结构体，一个class_data_bits_t结构体。cache_t包含一个可增量扩展的数组，这个数组就是散列表，它里面的每一个元素是bucket_t的结构体，bucket_t结构体里包含一个key（其实就是SEL）和一个IMP。class_data_bits_t是对class_rw_t结构体的封装，class_rw_t里包含一个class_ro_t结构体、一个protocols二维数组、一个properties二维数组、一个methods二维数组。class_ro_t里包含一个name、一个ivars数组、一个protocols数组、一个properties数组、一个methods数组。methods数组里是一个method_t的结构体，method_t里包含一个SEL、IMP、const char*类型的字符串。
 
 * 注意几个关键词：
   * isa指针是指向当前对象所属的类。它分为指针型isa和非指针型isa。指针型isa的所有数据都用于存储所属类的地址，非指针型的isa只有部分内容用来存储所属类的地址。我们可以说含有isa指针的结构体都是对象，比如说runloop、block等。其次，类也是一种对象，因为它继承自objc_object，称之为类对象。所以isa的指向就包括：实例对象的isa指向类对象，类对象的isa指针指向元类，元类的isa指针指向根元类，根元类的isa指针指向它本身。
 
     （MJ版本：isa_t是一个**联合体**，所谓联合体就是里面的成员共享一整块内存区域。联合体里面通常包含一个变量和一个结构体，结构体与变量共用一个内存区域，结构体使用**位域**的形式来标识其每个成员所占用的变量的字节区域。比如isa，整个是一个64位的变量，结构体里的每一个成员都占用其不同的位数，比如mark占第一位、isassociate占第二位、类地址占其中32位等）。
 
-  * 类对象的superClass指针指向父类对象，元类对象的superClass指针指向父类的元类，根元类的superClass指针指向NSObject，NSObject的superClass指针为nil；
+  * 类对象的super_class指针指向父类对象，元类对象的super_class指针指向父类的元类，根元类的super_class指针指向NSObject，NSObject的super_class指针为nil；
 
   * cache_t **使用散列表**来缓存曾经调用过的方法，可以提高方法查找速度。是**计算机局部性原理**的应用；runtime通过key进行hash算法定位到对应的bucket_t，然后获取IMP。
 
@@ -218,26 +218,54 @@ A *a = [[A alloc]init];
     ```
 
 * 几个重要的点：
-  * 1、class_rw_t里的二维数组实际是对应category里的protocols、properties、methods。每一个category对应一个元素。所以方法查找时会先查找category里的方法；而class_ro_t是指只读的相关数据，也就是说已编译好的对象是无法在通过分类添加成员变量的。在class_rw_t的方法列表中查找时，对于已排到的使用二分法查找，对于没有排序的直接遍历查找。
+  * 1、class_rw_t里的二维数组类型有protocols、properties、methods。在runtime的时候，class_data_bits_t**会先将ro里的方法、属性、协议拷贝到rw对应数组中去**，然后再添加category里的方法、属性、协议。也就是说rw中的二维数组不止分类添加的，也包括类原类的方法、属性、协议。其次category添加对应成员时会添加到二维数组的前面，所以方法查找时会先查找category里的方法，再查找原理里的方法。而rw里没有成员变量，成员变量只存放在ro里，而class_ro_t是指只读的相关数据，也就是说已编译好的对象是无法在通过分类添加成员变量的（其实在编译期间类的内存大小已经确定，也不允许轻易更改内存）。在class_rw_t的方法列表中查找时，对于已排到的使用二分法查找，对于没有排序的直接遍历查找。
 
-    （MJ版本：在runtime的时候，bits_data先是存储ro_t里类的原始数据，在运行时，会将ro里的方法、属性、协议拷贝到rw中，然后再添加category里的方法、属性、协议。也就是说rw中的二维数组不止分类添加的，也包括类原理的方法、属性、协议）。
-
-  * 2、superClass指针的指向代表了方法查找的过程。也就是说对于实例方法，会沿着类对象的方法列表（此处先省略缓存查找等细节）进行查找，找不到就查找父类的方法列表，最后找的NSObject。而类方法的查找是在元类的方法列表中进行查找，以此往上查找，找的根元类的时候，如果根元类也没有实现，而由于根元类的superClass指针指向NSObject，所以又会查找NSObject对应的实例方法。所以如果一个类没有实现对应的类方法，但是**NSObject**实现了相同名称的实例方法，那么调用类方法时，则最终会调用到NSObject的同名实例方法。（注意，这里的实例方法必须是NSObject实现的。自身类没有实现类方法，实现了同名的实例方法，也是会崩溃的）
+  * 2、super_class 指针的指向代表了方法查找的过程。也就是说对于实例方法，会沿着类对象的方法列表（此处先省略缓存查找等细节）进行查找，找不到就查找父类的方法列表，最后找的NSObject。而类方法的查找是在元类的方法列表中进行查找，以此往上查找，找的根元类的时候，如果根元类也没有实现，而由于根元类的superClass指针指向NSObject，所以又会查找NSObject对应的实例方法。所以如果一个类没有实现对应的类方法，但是**NSObject**实现了相同名称的实例方法，那么调用类方法时，则最终会调用到NSObject的同名实例方法。（注意，这里的实例方法必须是NSObject实现的。自身类没有实现类方法，实现了同名的实例方法，也是会崩溃的）
+  	* super : super关键字**调用方法**时，最终也会被编译成**objc_msgSendSuper**方法，这个方法第一个参数传入的是一个**objc_super的结构体**，第二个参数是SEL（比如下面例子里的@selector(class)）。**objc_super**包含一个receiver（消息接收者）和一个super_class（消息接收者的父类）指针，receiver对应的就是当前类的self。所以**使用super关键字调用方法，消息的接收者仍然是子类对象，只是方法实现是从内部的super_class开始搜索方法实现（从父类开始）**。另外，**class函数返回的其实就是方法调用者**，而无论是使用self还是super调用，最终的消息接收者都是子类对象，所以调用class方法，最后都返回当前子类的类名。
+  ```
+  @interface Person
+  @end
+  @interface Student : Person 
+  @end
+  @implemention
+  -(void)print {
+  
+  	/*
+      class方法是在NSObject里面:
+      -(Class)class {
+          return object_getClass(self);
+      }
+      根据这个方法的内部实现，我们可以知道，class返回的实际上是self的类型，也就是消息接收者的类型。
+      */ 
+  
+  	//会编译成：objc_msgSend(self， @selector(class))
+      NSLog(@"%@", [self class]);	//Student
+      NSLog(@"%@", [self superclass]);	//Person
+      
+     
+     //会编译成：objc_msgSendSuper({self, [Student class]}，@selector(class))
+      NSLog(@"%@", [super class]);	//Student
+      NSLog(@"%@", [super superclass]);	//Person
+  }
+  @end
+  ```
 
 #### Runtime涉及的事件
-* objc_msgSend：
-objc_msgSend是使用汇编语言写的。因为纯C函数是无法携带未知参数并跳转至任意函数指针的，另外汇编也更加高效。所以**方法查找实际可分为高速查找和缓慢查找**，大致为：
-	* 获取传入对象所属的类；
-	* 获取该类的方法缓存列表；
-	* 使用选择子在缓存中查找；
-	* 如果缓存不存在，调用C语言的缓慢查找方法列表。
-* 消息查找：
-runtime会把iOS所有的方法调用转成objc_msgSend函数调用，给receive发送一条selector。之后会进行iOS的方法查找过程：在当前类的cache中进行查找，如果没有就在当前方法列表中进行查找，如果没有，就会去父类中查找，同样先查找缓存列表，再查找方法列表。如此往复，一直到根类。其次，一旦找到了方法，则会缓存到自己的cache_t中（**注意：不过查找到的是自身方法还是父类方法，最终都会缓存到自己的cache_t中**）。
+* 消息查找过程：
 
-* 消息转发：
-如果方法查找没有找到，则iOS提供了动态方法解析和消息转发流程：
-动态方法解析：resolveInstanceMethod: (类方法是resolveClassMethod)。可以在这个方法里动态添加方法实现（使用class_addMethod），添加完成后，会重新走消息发送流程；
-如果动态方法解析没有添加方法，则开始走消息转发流程：先查看forwardingTargetForSelector：如果返回不为nil则说明转发给了其他id对象，则会开始走那个id对象的消息转发流程；如果返回nil，则会调用methodSignatureForSelector:方法，如果返回值不为nil，则会调用forwardingInvocation方法执行。否则调用doseNotRecognaziedSelector方法报出异常。所以我们可以使用methodSignaltureForSelelctor:和forwardingInvocation：来处理未找到方法导致崩溃的问题，可以对消息进行拦截，然后记录日志。
+  oc中所有的方法调用都会被转化成函数objc_msgSend。该方法的第一个参数默认是receiver（消息接收者），默认第二个参数是SEL（函数名）。objc_msgSend函数实际是使用汇编语言写的，通常调用频次非常高的函数会被转化成汇编，提高执行效率。
+
+  objc_msgSend方法内部先会判断接收者receiver是否为nil，如果为nil，则直接return退出函数；接着通过receiver的isa指针，获取到当前对象对应的class，然后**在汇编的层级对class的缓存列表进行哈希查找**（哈希查找的过程是用过SEL&mask找到索引，然后找到对应的IMP），如果查找到了就直接返回；如果没有查找到，则会进入C语言的相关函数进行查找过程，**C语言中又会先进行缓存的哈希查找**（为什么这里又要第二次查找缓存？可能是担心在查找的过程中，缓存里有添加进新的方法），如果找到，则直接返回IMP；如果没有找到，则进入到class_data_bits_t的方法列表中（这里既包含类的原始方法又包含分类添加的方法）进行查找，这个查找过程是**先对已排序好的方法列表进行二分查找，然后对未排序的方法进行for迭代查找**；如果没有找到，则通过receiver的superclass获取到父类，然后在父类里进行查找（查找的过程也是先进行缓存的哈希查找，再对方法列表进行二分查找和迭代查找），**如果找到了，则会将查找到的方法存入到当前receiver的缓存列表中（注意：父类方法也存到当前类的缓存列表中）**，如果没有找到，则继续往父类里进行查找，如此往复，一直到找到NSObject也没有找到，则会进入动态消息解析的过程。
+
+  * 这里的汇编里的查找过程可以成为高速查找，C语言里的查找过程可以成为缓慢查找；
+
+* 动态消息解析及消息转发：
+  如果方法查找没有找到，则iOS提供了动态方法解析和消息转发流程：
+  动态方法解析：resolveInstanceMethod: (类方法是resolveClassMethod)。可以在这个方法里动态添加方法实现（使用class_addMethod），添加完成后，**会重新走消息发送流程**。其次这里添加的方法最终也是添加到RW的方法列表里；
+  如果动态方法解析没有添加方法，则开始走消息转发流程（顾名思义，就是将消息转发给别人）：先查看forwardingTargetForSelector：如果返回不为nil则说明转发给了其他id对象，则会开始走那个id对象的消息转发流程（其实就是内部调用了objc_msgSend）；如果返回nil，则会调用methodSignatureForSelector:方法，这个方法返回一个**方法签名**（**方法签名其实就是包装返回值类型、参数类型。其实就是一个动态开辟函数空间的类** ），则会调用forwardingInvocation方法执行（forwardingInvocation的参数NSInvocation，NSInvocation封装了一个函数调用，其中包括：方法调用者、方法名、方法参数。 在这个函数里可以将方法调用者赋值给其他对象，这样也类似转发给了其他方法调用者。）。否则调用doseNotRecognaziedSelector方法报出异常。所以我们可以使用methodSignaltureForSelelctor:和forwardingInvocation：来处理未找到方法导致崩溃的问题，可以对消息进行拦截，然后记录日志。
+
+	* 面试题：方法签名的作用是什么？
+		方法签名包含了方法的TypeCoding，它同时会在底层开辟一段函数栈空间，然后赋值给了forwardingInvocation里的NSInvocation。NSInvocation实际则封装了一个方法调用。
 ```
 //动态消息解析
 +(BOOL)resolveInstanceMethod:(SEL)sel
@@ -274,8 +302,8 @@ void myMethod(id self, SEL _cmd) {
 - (NSMethodSignature *)methodSignatureForSelector:(SEL)aSelector {
 	if ([self respondsToSelector:aSelector]) {
 	//已经实现不做处理
-		return [self methodSignatureForSelector:aSelector];
-  	}
+		return [super methodSignatureForSelector:aSelector];
+  	} 
 	return [NSMethodSignature signatureWithObjCTypes:"v@:"];
 }
 -  (void)forwardInvocation:(NSInvocation *)anInvocation {
@@ -284,11 +312,49 @@ void myMethod(id self, SEL _cmd) {
 ```
 
 * Method-Swizzing：
-方法交换是指使用runtime API : method_exchangeImplementations(Method m1, Method m2)来交换两个方法的实现。
-q：两个category同时发生了methodSwizzed会出现什么问题？
-应该会换回去？首先如果分类方法与原始方法同名，则会被分类覆盖掉，而且分类方法如果和原始方法同名，则也无法实现methodswizzling，因为拿到的Method是一样的，所以无法交换。所以这道题的意思只能是两个分类的方法名是一样的，原始方法名不一样，然后在不同的分类分别与原始方法进行methodSwizzling。所以题解：首先分类被运行时加载进来时肯定不可能同时加载，也就是交换方法不可能同时执行，肯定有个先后顺序。然后肯定都得放到load方法里才可能都执行到。所以也就相当于换了之后又被换回去了！所以应该是调用的方法不会发生改变！
+  方法交换是指使用runtime API : method_exchangeImplementations(Method m1, Method m2)来交换两个方法的实现。
+  q：两个category同时发生了methodSwizzed会出现什么问题？
+  应该会换回去？首先如果分类方法与原始方法同名，则会被分类覆盖掉，而且分类方法如果和原始方法同名，则也无法实现methodswizzling，因为拿到的Method是一样的，所以无法交换。所以这道题的意思只能是两个分类的方法名是一样的，原始方法名不一样，然后在不同的分类分别与原始方法进行methodSwizzling。所以题解：首先分类被运行时加载进来时肯定不可能同时加载，也就是交换方法不可能同时执行，肯定有个先后顺序。然后肯定都得放到load方法里才可能都执行到。所以也就相当于换了之后又被换回去了！所以应该是调用的方法不会发生改变！
 
 * 其他：Category、KVO、KVC、ARC等
+
+* isKindOfClass & isMemberOfClass的区别？
+
+  这两个函数的底层实现是：
+
+  ```
+  -(BOOL)isMembberOfClass:(Class)cls {
+      return [self class] == cls;
+  }
+  -(BOOL)isKindOfClass:(Class)cls {
+      for(Class tcls = [self class], tcls = tcls->superClass) {
+          if (tls == cls) return YES;
+      }
+      return NO;
+  }
+  ```
+
+  从底层源码可以得出：isKindOfClass是判断消息接收者是否是参数类本身或者参数类子类；isMemberOfClass则是只判断消息接收者是否是参数类本身。
+
+  ```
+  @interface Person : NSObject
+  @end
+  
+  -(void)main {
+  //这几个是测试类对象，所以右侧肯定得是元类，而所有元类的根元类是NSObject。元类获取API：objc_getClass([xxx class])。
+      BOOL res1 = [(id)[NSObject class] isKindOfClass:[NSObject class]]; //YES
+      BOOL res2 = [(id)[NSObject class] isMemberOfClass:[NSObject class]]; //NO
+      BOOL res3 = [(id)[Test2 class] isKindOfClass:[Test2 class]]; //NO
+      BOOL res4 = [(id)[Test2 class] isMemberOfClass:[Test2 class]]; //NO
+  // 这几个是测试实例对象
+      BOOL res5 = [[NSObject new] isKindOfClass:[NSObject class]]; //YES
+      BOOL res6 = [[NSObject new] isMemberOfClass:[NSObject class]]; //YES
+      BOOL res7 = [[Test2 new] isKindOfClass:[Test2 class]]; //YES
+      BOOL res8 = [[Test2 new] isMemberOfClass:[Test2 class]]; //YES
+  }
+  ```
+
+  
 
 ### Runloop
 RunLoop是通过系统内部维护的事件循环来对事件和消息进行管理的对象。事件循环可以有效地对消息和事件进行管理：当有消息需要处理时，会将进程从内核态到用户态进行切换，同时唤醒当前线程处理消息；当没有消息需要处理时，会休眠当前线程，将进程从用户态到内核态进行切换，以避免资源占用。所以runloop可以保证进程不退出，可以处理和监听事件，可以定时渲染UI，可以调节CPU的工作。
