runloop  二刷 - 常驻线程

--- a/读书笔记/iOS自学笔记/知识小集00 - OC基础.md
+++ b/读书笔记/iOS自学笔记/知识小集00 - OC基础.md
@@ -359,10 +359,10 @@ void myMethod(id self, SEL _cmd) {
 ### Runloop
 RunLoop是通过系统内部维护的事件循环来对事件和消息进行管理的对象。事件循环可以有效地对消息和事件进行管理：当有消息需要处理时，会将进程从内核态到用户态进行切换，同时唤醒当前线程处理消息；当没有消息需要处理时，会休眠当前线程，将进程从用户态到内核态进行切换，以避免资源占用。所以runloop可以保证进程不退出，可以处理和监听事件，可以定时渲染UI，可以调节CPU的工作。
 #### runloop基础数据结构：
-CFRunLoopRef 里包含一个pthread、一个currentMode、一个modes、一个commonModes、一个commonModeItems。currentMode指当前runloop对应的mode，每次调用runloop的主函数时，只能指定一个mode，它是为了分割开同组的Observer、timer、source,让其互不影响。 currentMode和modes里的数据结构都是对应CFRunLoopMode,CFRunLoopMode对应5种mode：DefaultMode、UITrackingMode、UIInitializationMode、EventReceiveMode、CommonModes。commonModes对应的是字符串，也就是前面5种mode的名称，它是一种技术解决方案，modeItems对应4种item：Observer、timer、source0、source1。
+CFRunLoopRef 里包含一个pthread、一个currentMode、一个modes、一个commonModes、一个commonModeItems。其中后面3个都是集合类型，里面放着的是CFRunLoopMode类型的元素，CFRunLoopMode的成员主要包含name、source0、source1、obbservers、timers等元素。currentMode和modes里的数据结构都是对应CFRunLoopMode类型，CFRunLoopMode对应5种mode：DefaultMode、UITrackingMode、UIInitializationMode、EventReceiveMode、CommonModes。currentMode是指当前runloop对应的运行mode，每次调用runloop的时候，只能指定一个mode为currentMode。这么做的目的就是为了在某个mode运行下，不会受到其他时间的影响，比如在滚动的trackingmode时，不会受到点击触摸事件的影响。 commonModes对应的是字符串，也就是前面5种mode的名称，它是一种技术解决方案。modeItems对应4种item：Observer、timer、source0、source1。
 
 * 注意：
-  * CFRunLoop和NSRunLoop的区别就是：CFRunLoop是纯C的API，是线程安全的，NSRunLoop不是线程安全的。 所以如果在一个线程中操作另一个线程的runloop可能会产生意想不到的后果。所以可以使用getCGRunLoop获取对应的CFRunLoopRef类，来达到线程安全的目的。
+  * CFRunLoop和NSRunLoop的区别就是：CFRunLoop是纯C的API，是线程安全的，NSRunLoop是对CFRunLoop的包装，它不是线程安全的。 所以如果在一个线程中操作另一个线程的runloop可能会产生意想不到的后果。所以可以使用getCGRunLoop获取对应的CFRunLoopRef类，来达到线程安全的目的。
 
   * RunLoop与线程是一一对应的关系。所有的runloop被存在一个全局的字典容器中。我们无法手动代码创建runloop，只能通过currentRunLoop获取当前的runloop，获取的过程中，以线程为key值进行查找，没有找到就会默认创建，所以子线程中，不手动调用[[NSRunloop current] run]，则该线程中的runloop就不会自动开启。 
 
@@ -379,7 +379,7 @@ CFRunLoopRef 里包含一个pthread、一个currentMode、一个modes、一个co
 
     CommonMode就是为了解决一个RunLoop只能有一个Mode而产生的技术解决方案。而一个mode一旦被标记为common属性的话，则该mode的名字字符串就会被放到commonModes集合中，当runloop的mode发送变化时，runloop会将commonModeItems中的Observer、timer、source同步到具有Common属性的mode中，这样就可以让一些事件可以同时在多个mode中工作。比如NSTimer，当其被添加进commonMode中时，它就可以在标记了common属性的DefaultMode和TrackingMode中同时运行。
 
-  * 4种Mode Item：Observer、timer、source0、source1：Oberver主要是用来观察RunLoop自身的6大状态，Timer实际就是我们用的NSTimer，也就是说NSTimer是根据RunLoop的Timer事件实现的，所以它是不准的。source0用于接收用户事件，比如UIEvent。source1事件是系统内核使用的，它可以主动唤起线程。
+  * 4种Mode Item：Observer、timer、source0、source1：Oberver主要是用来观察RunLoop自身的6大状态，Timer实际就是我们用的NSTimer，也就是说NSTimer是根据RunLoop的Timer事件实现的，所以它是不准的。source0用于接收用户事件，比如UIEvent事件、performSelector调起的函数等。source1事件是系统内核使用的，比如基于Port的线程间通信、系统事件捕捉等，它可以主动唤起线程。
 
   * runloop循环状态：
 
