--- a/读书笔记/面试题精选/面练——各理论常考题.md
+++ b/读书笔记/面试题精选/面练——各理论常考题.md
@@ -218,6 +218,16 @@ Person和Student对象各占多少空间？
 
 * 什么是Runtime？平时项目中有用过么？
 
+  OC的动态性是由runtime实现的，可以将很多操作推迟到运行时再实现
+
+  利用管理对象给分类添加属性
+
+  遍历类的所有成员变量、字典转模型、归档解档
+
+  交换方法
+
+  
+
 * super与self的关系
 
 * isKindOfClass和isMemberOfClass的区别？
@@ -270,4 +280,9 @@ Person和Student对象各占多少空间？
       BOOL res8 = [[Test2 new] isMemberOfClass:[Test2 class]]; //YES
   ```
 
-  
+* 使用了方法交换method_exchangeImplementations之后，方法调用过程中，缓存列表有什么变化？
+
+  因为调用的方法交换实际上就是交换了IMP，也就是交换了RW的methods里的Method顺序，交换完成后会执行**清空缓存**的操作。
+
+### RunLoop
+* RunLoop的基本作用是什么？
