--- a/读书笔记/iOS自学笔记/知识小集00 - OC基础.md
+++ b/读书笔记/iOS自学笔记/知识小集00 - OC基础.md
@@ -371,35 +371,55 @@ CFRunLoopRef 里包含一个pthread、一个currentMode、一个modes、一个co
   * commonMode是一种技术解决方案。RunLoop启动时只能指定一个Mode作为当前的currentMode，如果要切换Mode，只能先退出当前Mode，重新选择一个Mode进入。而commonMode是一种伪模式，它是指标记了Common属性的Mode，默认被标记了Common属性的Mode只有DefaultMode，TrackingMode。也可以使用CFRunLoopAddCommonMode 方法向 Common Modes中添加自定义 modes。
 
     ```
-    [runLoop addTimer:timer forMode:NSDefaultRunLoopMode];
-    [runLoop addTimer:timer forMode:UITrackingRunLoopMode];
+    [[NSRunLoop currentRunLoop] addTimer:timer forMode:NSDefaultRunLoopMode];
+    [[NSRunLoop currentRunLoop] addTimer:timer forMode:UITrackingRunLoopMode];
     //下面一行和上面两行的效果是一样的
-    [runLoop addTimer:timer3 forMode:NSRunLoopCommonModes];
+    [[NSRunLoop currentRunLoop] addTimer:timer3 forMode:NSRunLoopCommonModes];
     ```
 
-    CommonMode就是为了解决一个RunLoop只能有一个Mode而产生的技术解决方案。而一个mode一旦被标记为common属性的话，则该mode的名字字符串就会被放到commonModes集合中，当runloop的mode发送变化时，runloop会将commonModeItems中的Observer、timer、source同步到具有Common属性的mode中，这样就可以让一些事件可以同时在多个mode中工作。比如NSTimer，当其被添加进commonMode中时，它就可以在标记了common属性的DefaultMode和TrackingMode中同时运行。
+    CommonMode就是为了解决一个RunLoop只能有一个Mode而产生的技术解决方案。而一个mode一旦被标记为common属性的话，则该mode的名字字符串就会被放到当前RunLoop的commonModes集合中，当runloop的mode发送变化时，runloop会将commonModeItems中的Observer、timer、source同步到commonModes集合中的mode中，这样就可以让一些事件可以同时在多个mode中工作。比如NSTimer，当其被添加进commonMode中时，它就可以在标记了common属性的DefaultMode和TrackingMode中同时运行。
 
   * 4种Mode Item：Observer、timer、source0、source1：Oberver主要是用来观察RunLoop自身的6大状态，Timer实际就是我们用的NSTimer，也就是说NSTimer是根据RunLoop的Timer事件实现的，所以它是不准的。source0用于接收用户事件，比如UIEvent事件、performSelector调起的函数等。source1事件是系统内核使用的，比如基于Port的线程间通信、系统事件捕捉等，它可以主动唤起线程。
 
   * runloop循环状态：
 
-    开始：RunLoop启动会发出**KCFRunLoopEntry**通知
+    第一步：进入RunLoop会发出**KCFRunLoopEntry**通知Observer，表示将循环监听当前runloop的mode中的各种状态。（注意：不存在KCFRunLoopBeforeObserver通知，然后如果将监听代码放到main函数里面，可以监听到 defaultMode的开启。其次，当切换mode时，比如从DefaultMode切到TrackingMode：会先执行DefaultMode的kCFRunLoopExit通知，然后执行UITrackingRunLoopMode的kCFRunLoopEntry通知；当滚动结束后，会先执行UITrackingRunLoopMode的kCFRunLoopExit通知,然后再执行DefaultMode的kCFRunLoopEntry通知，重新进入DefaultMode。）；
 
-    第一步：通知observers，RunLoop要进入loop了；（也就是发出**KCFRunLoopBeforeObserver**通知，将要进入事件循环。）
+    第二步：进入Loop后，会先通知Observer，RunLoop将要触发Timer回调和Sources回调，接着执行block；（其实是先判断是否有timer事件和source0事件，有的话会先发送**KCFRunLoopBeforeTimers**和**KCFRunLoopBeforeSources**，处理对应Timer回调和Sources回调，然后执行block。处理sources回调时如果有Source1是ready状态的话，则会先跳转到handle_msg去处理消息）；
 
-    第二步：进入事件循环后，会先通知Observer，RunLoop将要触发Timer回调和Sources回调，接着执行block；（其实是先判断是否有timer事件和source0事件，有的话会先发送**KCFRunLoopBeforeTimers**和**KCFRunLoopBeforeSources**，处理对应Timer回调和Sources回调，然后执行block。处理sources回调时如果有Source1是ready状态的话，则会先跳转到handle_msg去处理消息）
+    第三步：回调触发后，则通知Observers，RunLoop将要进入休眠状态。（发出**CFRunLoopBeforeWaiting**通知）；
 
-    第三步：回调触发后，则通知Observers，RunLoop将要进入休眠状态。（发出**CFRunLoopBeforeWaiting**通知）
-
-    第四步：进入休眠后，会等待mach_port消息，以再次唤醒。（有四个事件能将线程唤醒：基于port的Source1事件、Timer时间到、RunLoop超时、被调用者唤醒）
+    第四步：进入休眠后，会等待mach_port消息，以再次唤醒。（有四个事件能将线程唤醒：基于port的Source1事件、Timer时间到、RunLoop超时、被调用者唤醒）；
 
     第五步：被唤醒后，发出**KCFRunLoopAfterWaiting**消息
 
-    第六步：处理被唤醒的消息：
+    第六步：处理被唤醒的消息：timer时间、source1事件、GCD的唤起主队列事件；
 
-    第七步：根据当前RunLoop的状态来判断是否要走下一个Loop。如果是被外部强制停止或者loop超时，则不进入下一个loop，否则继续走下一个loop。（退出会发出**KCFRunLoopExit**通知）
+    第七步：根据当前RunLoop的状态来判断是否继续监听当前runloop，如果继续监听，则又会从第二步开始。如果是被外部强制停止或者loop超时或者切换Mode，则会先退出当前RunLoop；
 
-    根据这七个步骤也就知道，主要处理事件的阶段是在KCFRunLoopBeforeSources到KCFRunLoopBeforeWaiting之间 和 KCFRunLoopAfterWaiting之后。所以如果KCFRunLoopBeforeSources状态和KCFRunLoopAfterWaiting状态所在的时间过长（超过了卡顿阈值），那么就可以认为有卡顿出现了
+    第八步：如果退出的当前runloop的mode为非DefaultMode，则退出当前RunLoop的话会先发出**KCFRunLoopExit**通知，退出当前Mode。然后再重新进入到DefaultMode，发出DefaultMode的kCFRunLoopEntry通知。如果是在DefaultMode中，则只有程序关闭或切换Mode才会执行DefaultMode的**KCFRunLoopExit**通知。所以程序运行过程中肯定是一直处于某一种Mode当中的。也就是RunLoop一直会存在；
+
+    根据这八个步骤也就知道，主要处理事件的阶段是在KCFRunLoopBeforeSources到KCFRunLoopBeforeWaiting之间 和 KCFRunLoopAfterWaiting之后。所以如果KCFRunLoopBeforeSources状态和KCFRunLoopAfterWaiting状态所在的时间过长（超过了卡顿阈值），那么就可以认为有卡顿出现了
+
+    ```
+    //另一种创建Observable的方式
+            CFRunLoopObserverRef observer2 = CFRunLoopObserverCreateWithHandler(kCFAllocatorDefault, kCFRunLoopAllActivities, YES, 0, ^(CFRunLoopObserverRef observer, CFRunLoopActivity activity) {
+                CFRunLoopMode mode = CFRunLoopCopyCurrentMode(CFRunLoopGetCurrent());
+                switch (activity) {
+                    case kCFRunLoopEntry:
+                        NSLog(@"block__kCFRunLoopEntry__%@", mode);
+                        break;
+                    case kCFRunLoopExit:
+                        NSLog(@"block__kCFRunLoopExit__%@", mode);
+                        break;
+                    default:
+                        break;
+                }
+                CFRelease(mode);
+            });
+            CFRunLoopAddObserver(CFRunLoopGetMain(), observer2, kCFRunLoopCommonModes);
+            CFRelease(observer2);
+    ```
 
     
 
@@ -452,7 +472,136 @@ CFRunLoopRef 里包含一个pthread、一个currentMode、一个modes、一个co
 
 * GCD：GCD中的dispatch_async在使用到主线程的时候也使用到了RunLoop。首先GCD的所有线程仍然由libDispatch处理，但是当用到主线程的时候，libDispatch会向主线程的RunLoop发送消息，主线程的RunLoop会被唤醒，并从消息中获取block，然后回调执行。其他线程则仍由libDispatch处理。
 
-* 网络请求框架中的常驻线程；
+* 线程保活，网络请求框架中的常驻线程(面试有被考到)；
+  如果一个子程序经常要处理任务，那就最好不要让其销毁。因为频繁地创建和销毁线程，也是非常消耗性能的。开启一个常驻线程也是非常便捷的。比如：
+
+  ```
+  -(void)viewDidLoad {
+  	[super viewDidLoad];
+  	_thread = [[FCFThread alloc] initWithTarget:self selector:@selector(run) object:nil];
+  	[_thread start];
+  }
+  
+  - (void)touchesBegan:(NSSet<UITouch *> *)touches withEvent:(UIEvent *)event {
+  	//每点击一次就执行一次任务。意味着经常要在子程序中执行任务，所以才要求最好保活线程。
+  	[self performSelector:@selector(task) onThread:_thread withObject:nil waitUntilDone:NO];
+  }
+  
+  // 子线程经常要执行的任务
+  - (void)task {
+  	NSLog(@"子线程经常要执行的任务%s %@", __func__, [NSThread currentThread]);
+  }
+  
+  //这个方法就是在子线程开启的时候执行，为了开启runloop，保证子线程不退出
+  - (void)run {
+  	NSLog(@"%s %@", __func__, [NSThread currentThread]);
+  	//添加了这句就可以让线程保活，不执行后面的end。
+  	[[NSRunLoop currentRunLoop] addPort:[[NSPort alloc] init] forMode:NSDefaultRunLoopMode];
+  	[[NSRunLoop currentRunLoop] run];
+  	NSLog(@"end");
+  }
+  ```
+  但是这段代码存在的一个问题：子线程thread保活了，也就是不会被释放。而thread的target是当前ViewController，所以就导致当前ViewController无法被释放，导致内存泄漏。所以我们换一种thread的block初始化方法，使得ViewController并不会被thread强引用：
+  ```
+  -(void)viewDidLoad {
+  	[super viewDidLoad];
+  	//不引用target创建子线程和开始方法
+  	_thread = [[FCFThread alloc] initWithBlock:^{
+            NSLog(@"begin__%@", [NSThread currentThread]);
+           
+           //添加了这句就可以让线程保活，不执行后面的end。
+           [[NSRunLoop currentRunLoop] addPort:[[NSPort alloc] init] forMode:NSDefaultRunLoopMode];
+           [[NSRunLoop currentRunLoop] run];
+           
+           NSLog(@"end__%@", [NSThread currentThread]);
+    }];
+    [_thread start];
+  
+  }
+  
+  - (void)touchesBegan:(NSSet<UITouch *> *)touches withEvent:(UIEvent *)event {
+  	//每点击一次就执行一次任务。意味着经常要在子程序中执行任务，所以才要求最好保活线程。
+  	[self performSelector:@selector(task) onThread:_thread withObject:nil waitUntilDone:NO];
+  }
+  
+  // 子线程经常要执行的任务
+  - (void)task {
+  	NSLog(@"子线程经常要执行的任务%s %@", __func__, [NSThread currentThread]);
+  }
+  ```
+  这样的话，ViewController可以释放了，但是当前线程仍然没有销毁。还是会导致性能消耗。所以最好的做法就是让thread也跟随ViewController一起销毁。所以我们在ViewController的模拟销毁方法中方法中调用CFRunLoopStop方法暂停当前RunLoop，例如：
+  ```
+  // 停止子线程的runloop
+  - (void)stopThread {
+    	CFRunLoopStop(CFRunLoopGetCurrent());
+    	NSLog(@"%s %@", __func__, [NSThread currentThread]);
+  }
+  
+  // 按钮模拟销毁子线程
+  - (IBAction)destroyThread:(id)sender {
+    	// 让销毁方法在子线程中执行，才能拿到子线程的runloop
+    	[self performSelector:@selector(stopThread) onThread:self.thread withObject:nil waitUntilDone:NO];
+    	self.thread = nil;
+  }
+  ```
+  结果发现，子线程仍然不会执行到打印end，也就是说子线程仍然没有销毁。这是为什么呢？从RunLoop的run方法的说明中，我们发现NSRunLoop的run方法底层是在重复调用runMode:beforeDate:方法，相当于是在这个Date之前开启一个无限的循环。换句话说run方法是停不掉的。所以我们的策略就是不使用NSRunLoop的run方法。最终代码就是：
+  ```
+  - (void)viewDidLoad {
+  	[super viewDidLoad];
+  	__weak typeof(self) weakself = self;
+  	//使用block不使用target，避免强引用target
+  	_thread = [[FCFThread alloc] initWithBlock:^{
+            NSLog(@"begin__%@", [NSThread currentThread]);
+  		//添加了这句就可以让线程保活，不执行后面的end。
+  		[[NSRunLoop currentRunLoop] addPort:[[NSPort alloc] init] forMode:NSDefaultRunLoopMode];
+  		//不使用这个方法，因为它无法被Stop。
+  		//[[NSRunLoop currentRunLoop] run];
+  		
+  		// 注意这里的弱指针可能在下一个循环时被nil了。所以要加一个判断。
+  		while (weakself && !weakself.isStop) {
+  			[[NSRunLoop currentRunLoop] runMode:NSDefaultRunLoopMode beforeDate:[NSDate distantFuture]];
+  		}
+  		NSLog(@"end__%@", [NSThread currentThread]);
+  	}];
+  	[_thread start];
+  }
+  
+  - (void)touchesBegan:(NSSet<UITouch *> *)touches withEvent:(UIEvent *)event {
+  	//每点击一次就执行一次任务。意味着经常要在子程序中执行任务，所以才要求最好保活线程。
+  	if (self.thread) {
+  		[self performSelector:@selector(task) onThread:_thread withObject:nil waitUntilDone:NO];
+  	}
+  }
+  
+  // 子线程经常要执行的任务
+  - (void)task {
+  	NSLog(@"子线程经常要执行的任务%s %@", __func__, [NSThread currentThread]);
+  }
+  
+  //停止子线程的runloop
+  - (void)stopThread {
+  	//更改标记
+  	self.isStop = YES;
+  	//停止RunLoop(只能停止一次runMode:deforeDate,所以无法使用它停止RunLoop的run方法)
+  	CFRunLoopStop(CFRunLoopGetCurrent());
+  	NSLog(@"%s %@", __func__, [NSThread currentThread]);
+  	//清空线程
+  	self.thread = nil;
+  }
+  
+  // 按钮模拟销毁子线程
+  - (IBAction)destroyThread:(id)sender {
+  	if (!self.thread) return;
+  	// 让销毁方法在子线程中执行，才能拿到子线程的runloop。
+  	// 其次要注意一点，这里的waitUntilDone要设置成YES，表示子线程里的函数执行完毕后才会执行当前线程接下来的方法。如果设置成NO。然后在ViewController的dealloc方法中调用这个函数去销毁子线程会可能导致ViewController在子程序之前销毁，从而出现坏内存访问的问题。
+  	[self performSelector:@selector(stopThread) onThread:self.thread withObject:nil waitUntilDone:YES];
+  }
+  
+  - (void)dealloc {
+      [self destroyThread:nil];
+  }
+  ```
+
 
 [runloop详解](https://blog.ibireme.com/2015/05/18/runloop/)
 
@@ -1889,8 +2038,3 @@ https://juejin.im/post/5abca877f265da238155b6bc
 [iOS锁详解](https://juejin.im/post/6844904167010467854)
 
 [iOS即时通讯](https://www.jianshu.com/p/2dbb360886a8)
-
-
-```
-
-```
