--- a/读书笔记/面试题精选/面练——各理论常考题.md
+++ b/读书笔记/面试题精选/面练——各理论常考题.md
@@ -286,3 +286,27 @@ Person和Student对象各占多少空间？
 
 ### RunLoop
 * RunLoop的基本作用是什么？
+
+* RunLoop的线程阻塞是怎么阻塞的？（这里的阻塞是休眠的意思，怎么进行休眠的？）
+
+  它是存在从用户态切到内核态的一个过程，切到内核态后会将线程进行休眠，避免资源占用。
+
+* 如何创建一个常驻线程?
+
+* RunLoop内部实现原理？
+
+* RunLoop与线程的关系？
+
+* timer与RunLoop的关系？
+
+* tableView滚动的时候，为什么定时器无法响应，怎么解决？
+
+* RunLoop怎么响应用户操作？
+
+* RunLoop有几种状态？
+
+* RunLoop的mode作用是什么？
+
+  RunLoop一次只能运行在一种模式下，使得不同mode的time、source、observer相互隔离，而互不影响。这样就可以保证项目在一种mode下运行流畅。
+
+* RunLoop在项目中有用到吗？
