多线程 锁 二刷完成

--- a/读书笔记/iOS自学笔记/知识小集00 - OC基础.md
+++ b/读书笔记/iOS自学笔记/知识小集00 - OC基础.md
@@ -168,7 +168,7 @@ void objc_setAssociatedObject(id object, const void* key, id value, objc_Associa
 
 #### 属性关键字
 * 读写属性：readwrite: 默认，可读可写；readOnly: 只读；
-* 原子属性：atomic: 原子性; nonatomic: 非原子性。atomic并不能完全包证线程安全，atomic能够保证读写方法的原子性，比如：如果是一个可变数组的话，只能保证数组的读写方法的原子性，但是对数组里元素的操作是没法保证原子性的。一般我们保证可变数组的线程安全的最直接方式是使用信号锁，如果要实现多读单写则要使用dispatch_barrier_async。
+* 原子属性：atomic: 原子性; nonatomic: 非原子性（原子性可以理解为setter和getter方法内部是线程同步的）。atomic并不能完全包证使用属性的过程是线程安全的，  atomic能够保证读写方法的原子性，比如：如果是一个可变数组的话，只能保证数组的读写方法的原子性，但是对数组里元素的操作是没法保证原子性的。其次 atomic非常耗性能。一般我们保证可变数组的线程安全的最直接方式是使用信号锁，如果要实现多读单写则要使用dispatch_barrier_async。
 * assign & weak：assign可以修饰基础数据类型和对象类型，但是修饰的对象类型，在对象释放后不会自动置为nil，容易导致垂悬指针错误；weak只能用于修饰对象类型，weak指针指向的对象释放后，会在dealloc内部对weak指针置为nil操作。所以一般使用是用weak修饰对象类型，用assign修饰基础数据类型。其次他们修饰对象类型的话也都不会增加所指对象的引用计数。
 * copy：copy一般用于修饰不可变集合类型和block；通常的一个面试题是：为什么使用copy修饰NSString而不是strong。原因就是使用strong的话，如果用一个NSMutableString的类型b给NSString类型a赋值，那么a最终也就变成了NSMutableString类型。对b的修改也会导致a的变化，这样就违背了a是不可变类型的初衷，出现安全性问题。而使用copy，底层是深拷贝，会拷贝一份新的内存，两者的修改不会相互影响。
 * 浅拷贝 & 深拷贝：浅拷贝是指拷贝一个指针，与被拷贝对象是同一个内存区域，也就是会增加被拷贝对象的引用计数；深拷贝是将内存区域重新生成一份，然后用指针指向它，不会增加被拷贝对象的引用计数。(如何记忆？原则上，对拷贝完成之后的对象进行操作，不会影响原有对象则为深拷贝，否则为浅拷贝。比如，对不可变对象进行copy，结果是不可变对象，也就是拷贝前后的对象其实是可以使用同一块内存区域的；对可变对象进行copy，结果是不可变对象，那对拷贝之后的对象进行操作要不影响原有对象，只能拷贝另一份内存区域，所以是深拷贝；同样的，无论对可变还是不可变对象进行mutableCopy，最好都生成可变对象，对拷贝之后的对象进行操作，想要不影响原有对象，则必须拷贝另一份内存区域，所以是深拷贝)
@@ -1067,36 +1067,96 @@ NSThread * thread = [[NSThread alloc] initWithTarget:self selector:@selector(xxx
 // 2 创建线程 自动启动
 [NSThread detachNewThreadSelector:@selector(xxx) toTarget:self withObject:nil];
 ```
-* performSelector 含有thread的API可以隐式开启线程。但是其含有delay的API则是使用了线程中对应runloop的Timer，需要开启NSRunLoop才能运行
+* performSelector afterDelay、UntilDone: 含有thread的API可以隐式开启线程。但是其含有delay的API则是使用了线程中对应runloop的Timer，需要开启NSRunLoop才能运行
 ```
-[self performSelectorInBackground@selector(xx) withObjct:nil];
+- (void)test {
+    NSLog(@"test");
+}
+
+- (void)interView05 {
+//    NSLog(@"1");
+    //这个定时器任务可以直接执行，因为主线程的RunLoop是自动开启的。
+//    [self performSelector:@selector(test) withObject:nil afterDelay:0];
+//    NSLog(@"3");
+    
+    dispatch_queue_t queue = dispatch_get_global_queue(0, 0);
+    dispatch_async(queue, ^{
+        NSLog(@"4");
+        //可以立即执行
+//        [self performSelector:@selector(test) withObject:nil];
+        // 带有afterDelay的API底层用到了NSTimer定时器，定时器是得添加到RunLoop里面工作。而子线程的RunLoop需要手动开起。
+        [self performSelector:@selector(test) withObject:nil afterDelay:0];
+        /*手动启动runloop 注意run方法只是调用了runMode:beforeDate:方法，添加事件源得另外方法添加，没有事件源，线程仍旧无法保活。这里能够使用run方法让线程保活是因为perform:afterDelay:方法本身就有一个定时器事件源，所以可以直接run开启。若把这行代码放到perform前面则同样无法执行perform的selector，因为那时没有事件源。
+         */
+//      [[NSRunLoop currentRunLoop] run];
+        
+        // 另外一种手动启动runloop的方式，先添加事件源，再开启runMode
+        [[NSRunLoop currentRunLoop] addPort:[[NSPort alloc] init] forMode:NSDefaultRunLoopMode]; //添加事件源source0
+        [[NSRunLoop currentRunLoop] runMode:NSDefaultRunLoopMode beforeDate:[NSDate distantFuture]]; //开启
+        NSLog(@"5");
+    });
+}
+
+- (void)interView06 {
+    NSThread * thread = [[NSThread alloc] initWithBlock:^{
+        NSLog(@"1");
+        // 手动开启runloop，让线程不要立即死掉，才能执行下面的perform UntilDone
+        [[NSRunLoop currentRunLoop] addPort:[[NSPort alloc] init] forMode:NSDefaultRunLoopMode]; //添加事件源
+        [[NSRunLoop currentRunLoop] runMode:NSDefaultRunLoopMode beforeDate:[NSDate distantFuture]]; //启动
+//        这里不能直接用run方法，因为run方法只是调用了runMode，但是没有添加事件源，也可能无法执行下面的perform方法。之前的perform:afterDelay:方法是其本身就有一个定时器事件源，所以可以直接run开启。
+//        [[NSRunLoop currentRunLoop] run];
+    }];
+    //
+    [thread start]; //block立马执行
+    
+    /*
+     这个UntilDone是指等thread里的block任务执行完成后才执行Selector。但是如果thread内部不开启runloop，thread就无法保活，当perform执行selector时，thread有可能会退出。
+     只调用runloop的run方法有时也会报错： target thread exited while waiting for the perform'
+     */
+    [self performSelector:@selector(test) onThread:thread withObject:nil waitUntilDone:YES];
+}
+
+// 这里会产生死锁，当thread start的时候，
+- (void)interView07 {
+    NSLog(@"1");
+    NSThread * thread = [[NSThread alloc] initWithBlock:^{
+        NSLog(@"2");
+        [[NSRunLoop currentRunLoop] addPort:[[NSPort alloc] init] forMode:NSDefaultRunLoopMode];
+        [[NSRunLoop currentRunLoop] runMode:NSDefaultRunLoopMode beforeDate:[NSDate distantFuture]];
+    }];
+    NSLog(@"3");
+    // UntilDone 为YES就会产生死锁，为NO就可以正常运行。（PS：不是很明白）
+    [self performSelector:@selector(test) onThread:thread withObject:nil waitUntilDone:YES];
+    NSLog(@"4");
+    [thread start];
+}
 ```
 #### GCD
 GCD是一个多核并行运算的解决方案，它可以自动管理线程的生命周期，只需要告诉GCD干什么就行。
 ##### 队列和任务:
 * 队列分为**串行**和**并发**：
-串行派发是指同一时间一次只能执行一个任务，只有在当前任务执行完成后，才会派发新的任务；并发是指多个任务可以在同一时间同时进行，无需等待前面的任务执行完也可以派发新任务；iOS中主队列mian是一种串行队列，全局队列global是一种并发队列；
+串行派发是指同一时间一次只能执行一个任务，只有在当前任务执行完成后，才会派发新的任务；并发是指多个任务可以在同一时间同时进行，无需等待前面的任务执行完也可以派发新任务；iOS中主队列mian是一种特殊的串行队列，全局队列global是一种并发队列；
 
 * 任务分为**同步**执行和**异步**执行：
-同步执行是在当前线程中执行，异步执行会在线程池中获取一个线程进行执行，如果线程池中没有则会创建一个新的线程执行；
+**同步和异步主要影响会不会开启线程**。同步执行是在当前线程中执行，异步执行会在线程池中获取一个线程进行执行，如果线程池中没有则会创建一个新的线程执行；**但是如果是在main队列中，无论是同步还是异步都不会开启新的线程，都是在主队列中执行**。
 
 ##### 4种线程组合：
 * 同步串行：同步不开启新线程，串行队列让任务一个一个执行。所以它实际不会产生多线程运算；
 * 同步并发：并发队列虽然可以并发执行，但是同步执行不开启线程，也就相当于任务只在一个线程中执行，而一个线程一次只能处理一个事件，所以实际也不构成多线程运算；
-* 异步串行：异步执行虽然会开线程，但是串行队列中任务一个个执行，所以也不构成多线程运算；
-* 异步并发：并发队列可以让任务并发执行，异步执行可以开启多个线程，所以这才会真正实现多线程运算。
+* 异步串行：异步执行虽然会开线程（注意在main队列依旧不开启线程），但是串行队列中任务一个个执行，所以也不构成多线程运算；
+* 异步并发：并发队列可以让任务并发执行，异步执行可以开启多个线程（注意在main队列依旧不开启线程），所以这才会真正实现多线程运算。
 ```
 //eg 01
 serialQueue.async{
     serialQueue.sync{
     }
 }
-// 分析：首先这是在一个串行队列里执行，所以其执行方式必然是一个一个执行。最外层使用异步执行，所以会开辟一个线程；内部的任务是同步执行，所以是在当前线程中执行。因为是串行执行，所以内部任务是在外部任务执行完成后才开始执行，而外部任务的执行完成依赖于内部任务也执行完成。所以就导致了死锁！
+// 分析：首先这是在一个串行队列里执行，所以其执行方式必然是一个一个执行。最外层使用异步执行，所以会开辟一个线程；内部的任务是同步执行，所以是在当前线程中执行，且要求立马执行。因为是串行执行，所以内部任务是在外部任务执行完成后才开始执行，而外部任务的执行完成依赖于内部任务也执行完成。所以就导致了死锁！
 SerialQueue.sync{
     SerialQueue.async{
     }
 }
-//分析：同上面的分析类似。使用串行队列，最外层任务是在当前线程中执行，内部任务会开辟新的线程执行。外部任务的执行完成意味着内部任务也执行完成，而内部任务可以在另外的线程中执行完成，所以这个是可以正常运行的！
+//分析：同上面的分析类似。使用串行队列，最外层任务是在当前线程中执行，内部任务会开辟新的线程执行，且不要求立马执行。外部任务的执行完成意味着内部任务也执行完成，而内部任务可以在另外的线程中执行完成，所以这个是可以正常运行的！
 ```
 ##### 全局队列优先级
 创建全局队列时，有一个参数是优先级的标识，所以如果要在并行队列中，让任务先执行，这可以通过设置这个优先级来达到目的（但是这里要注意，先执行并不一定是第一个执行完，它只能保证开始的执行顺序而已）。它的优先级包括（低-高：background（同步备份数据）、utility（需要时间的下载）、default、user-Initiated(用户出发的，如打开文件)、user-Interractive(用户交互，如主线程事件)）
@@ -1446,25 +1506,65 @@ GCD则有栅栏、group、信号量、单例、延时执行等。在暂停、取
 https://juejin.im/post/6844904167010467854
 
 锁主要可以分为三大类：**信号量**、**互斥锁**、**自旋锁**：
-* 信号量查看GCD相关知识点；
+
+ 性能从低到高排列：
+
+* OSSpinLock是自旋锁，自旋锁是忙等的锁，被访问资源被锁时，线程不会休眠，而是不停地循环等待，直到被锁资源被释放，所以自旋锁效率较高。但是存在优先级反转的问题：优先级低的线程先获取资源，优先级高的线程未获取到资源，但是优先级高的线程将被优先调度。 最终导致优先级更高的线程一直在等待解锁，但是却会一直占用CPU，优先级低的线程获取到资源却没有CPU去执行，而无法释放锁；最终导致相互等待的结果。所以自旋锁已经不再使用了；
+
+* os_unfair_lock 用来替换OSSpinLock，但是它并非忙等的锁，等待的过程中也会处于休眠；iOS10开始使用；
+
+* 信号量查看GCD相关知识点；（推荐使用）
+
 * phread_mutex是互斥锁，互斥锁在访问被锁的资源时，调用者线程会休眠，此时CPU可以调度其他线程工作，直到被锁资源释放，此时线程才会被唤醒。
-pthread_mutex可以传入不同参数，实现递归锁pthread_mutex(recursive)。
-其次NSLock、NSCondition、NSRecursiveLock、NSConditionLock都是内部封装的pthread_mutex,都属于互斥锁。@synchronize是NSLock的封装，牺牲了效率，简洁了语法。
-* OSSpinLock是自旋锁，自旋锁是忙等的锁，被访问资源被锁时，线程不会休眠，而是不停地循环等待，直到被锁资源被释放。自旋锁效率较高，但是存在优先级反转的问题：就是等待线程的优先级更高，会一直占用CPU，优先级低的线程就无法释放锁；
+  pthread_mutex可以传入不同参数，实现普通锁pthread_mutex(normal)和递归锁pthread_mutex(recursive)；（推荐使用）
 
-* os_unfair_lock 用来替换OSSpinLock，但是它并非忙等的锁；
-* pthread_mutex 互斥锁，等待线程时会进行休眠。它同时含有多种锁，比如pthread_mutex—递归锁、pthread_mutex—条件锁；
 * NSLock是对pthread_mutex 普通锁的封装；
-* NSRecursiveLock是对pthread_mutex—递归锁的封装；
-* NSCondition是对phread_mutex—条件锁的封装；
+
+* NSCondition是对phread_mutex_t + pthread_cond_t的封装；
+
+* pthread_mutex(recursive) 递归锁；（因为递归锁需要处理）
+
+* NSRecursiveLock是对pthread_mutex(recursive)递归锁的封装；
+
 * NSConditionLock是对NSCondition的又一层封装；
-* @synchronized是对pthread_mutex—递归锁的封装；
 
-[锁的具体实现](https://hnxczk.github.io/blog/articles/locks.html#%E6%80%A7%E8%83%BD)
+* @synchronized是对pthread_mutex(recursive)递归锁的封装；
 
-另外信号量和同步队列也能实现类似锁的操作！
+  可以看到NSLock、NSCondition、NSRecursiveLock、NSConditionLock都是内部封装的pthread_mutex,都属于互斥锁的范畴。@synchronize是pthread_mutex(recursive)的封装，牺牲了效率，简洁了语法。
+
+  * 什么情况下使用自旋锁比较划算？
+  	* 预计线程等待锁的时间很短；
+  	* 加锁的代码(临界区)经常被调用，但竞争情况很少发生；
+  	* CPU资源不紧张；
+  	* 多核处理器；
+  * 什么情况下使用互斥锁比较划算？ 
+  	* 预计线程等待锁的时间较长；
+  	* 单核处理器；
+  	* 临界区有IO操作；
+  	* 临界区代码复杂或循环量大；
+  	* 临界区竞争非常激烈； 
+
+
+
+#### 读写安全
+
+* IO操作，文件操作。
+
+  1、从文件中读取内容；
+
+  2、从文件中写入内容；
+
+
+
+
+
+
 
 #### 死锁的几种情况
+
+##### GCD产生死锁总结：
+**sync函数**往**当前串行队列**中添加任务，就会产生死锁。（因为sync得立马执行，而串行队列任务得一个一个执行，所以就导致新旧任务相互等待的情况）
+
 ```swift
 //1、串行队列：异步里同步嵌套
 SerialQueue.async{
