--- a/读书笔记/面试题精选/面练——各理论常考题.md
+++ b/读书笔记/面试题精选/面练——各理论常考题.md
@@ -310,3 +310,20 @@ Person和Student对象各占多少空间？
   RunLoop一次只能运行在一种模式下，使得不同mode的time、source、observer相互隔离，而互不影响。这样就可以保证项目在一种mode下运行流畅。
 
 * RunLoop在项目中有用到吗？
+
+
+
+### 多线程
+
+* 你理解的多线程？
+* iOS的多线程方案有哪几种？你更倾向于哪一种？
+* GCD的队列类型？
+* 说一下OperationQueue和GCD的区别，以及各自的优势？？
+* 线程安全的处理手段有哪些
+* OC你了解哪些锁？
+	* 自旋和互斥对比？
+	* 使用以上锁需要注意什么？
+	* 怎么实现自旋或互斥锁？ 
+
+
+s
