多线程 文件读写 二刷完成

--- a/读书笔记/iOS自学笔记/知识小集00 - OC基础.md
+++ b/读书笔记/iOS自学笔记/知识小集00 - OC基础.md
@@ -1550,13 +1550,18 @@ https://juejin.im/post/6844904167010467854
 
 * IO操作，文件操作。
 
-  1、从文件中读取内容；
-
-  2、从文件中写入内容；
-
-
+  * 同一时间，只能有一条线程进行写操作；
+  * 同一时间，允许有多个线程进行读操作；
+  * 同一时间，不允许既有写操作，又有读操作
 
 
+* 多读单写方案：
+
+  * pthread_rwlock; 
+
+    等待的过程中会进入休眠（所以应该是互斥锁的一种）。
+
+  * 
 
 
 
