内存管理 二刷 -处理NSTimer、CADisplayLink循环引用问题

--- a/读书笔记/iOS自学笔记/知识小集00 - OC基础.md
+++ b/读书笔记/iOS自学笔记/知识小集00 - OC基础.md
@@ -853,37 +853,81 @@ age = 30;
 * 截获_ _ strong类型的变量导致的循环引用：
 由于block对局部auto对象类型的截获变量特性，所以就导致了可能存在的循环引用问题。如果对象类型是 _ _ strong类型的，那么block对其进行截获是会连同所有权修饰符一起截获，也就是说在block内部也是使用了一个 _ _ strong类型的变量强引用了它。所以这就导致了循环引用的问题。所以最好的解决方案就是对截获的变量使用  _ _ weak 的变量去替代它，其次常用的解决循环引用的方法就是断环。
 
-* 处理NSTimer导致的循环引用问题：
+* 处理NSTimer导致的循环引用问题（CADisplayLink也存在一样的问题）：
 例如：当前类强引用了timer，timer又强引用了target。所以一般我们都考虑在当前类释放的时候， [ _ timer invalidate]; _ timer = nil; ，使用断环的方式处理循环引用。但是如果不太容易知晓在何处使用invalidate更好的情况下，怎么解除循环引用是一个难点。
 ```
-_ timer = [NSTimer scheduledTimerWithTimeInterval:1.0f target:self selector:@selector(fire) userInfo:nil repeats:YES];
+_ timer = [NSTimer scheduledTimerWithTimeInterval:1.0f target:self selector:@selector(fire) userInfo:nil repeats:YES]; // 这种api默认开启了runloop的。
 -(void)fire{
     NSLog(@"fire");
 }
+// 存在的问题就是NSTimer的target强引用了当前控制器。而当前控制器又强引用了NSTimer，导致循环引用。
 ```
-解决方案：借助一个虚基类NSProxy,弱引用target
+解决方案一：不使用@selector的方式,使用block，这样就不会对target进行强引用
 ```
-@interface FCFProxy : NSProxy
+_ _ weakself typeof(self) weakself = self;
+_ timer = [NSTimer scheduledTimerWithTimeInterval:1.0 repeats: YES block:^(NSTimer * _ Nonull timer ) {
+    [weakself fire];
+}];
+```
+
+解决方案二：借助一个中间类（继承自NSObject）,弱引用target，使得NSTimer强引用中间类
+```
+// 这里可以继承自NSObject
+@interface FCFProxy : NSObject
++(intencetype)proxyWithTarget:(id) target;
 @property (nonatomic,weak) id target;
 @end
 @implementation FCFProxy
 
-//获取当前的方法签名
-- (NSMethodSignature * ) methodSignatureForSelector:(SEL)sel
-{
++ (intencetype)proxyWithTarget:(id) target {
+    FCFProxy * proxy = [FCFProxy new];
+    proxy.target = target;
+    return proxy;
+}
+
+// 使用消息转发，将中间类没有实现的selector转发给target
+- (id) forwardingTargetForSelector:(SEL)aSelector {
+    return self.target;
+}
+
+//解析： 借助于中间类，NSTimer就强引用了中间类，而中间类却只是弱引用了self，所以就不会造成循环引用。但是中间类会找不到这个Selector方法。所以可以使用消息转发技术，将函数调用转发给self(也就是中间类的target)
+_ timer = [NSTimer scheduledTimerWithTimeInterval:1.0f target:[FCFProxy proxyWithTarget:self] selector:@selector(fire) userInfo:nil repeats:YES]; 
+
+同样的，CADisplayLink也可以使用这种中间类的方式去解决循环引用问题。
+_ link = [CADisplayLink displayLinkWithTarget:[FCFProxy proxyWithTarget:self] selector:@selector(fire)];
+[ _ link addToRunLoop:[NSRunLoop mainRunLoop] forMode:NSDefaultRunLoopMode];
+
+```
+解决方案三：借助一个中间类（继承自NSProxy）,弱引用target，使得NSTimer强引用中间类
+```
+// NSProxy 是专门用来做消息转发的。它的子类不保存消息查找和动态消息解析，甚至不存在forwardingTargetForSelector方法。而是直接进入methodSignatureForSelector方法中
+@interface FCFProxy : NSProxy
++(intencetype)proxyWithTarget:(id) target;
+@property (nonatomic,weak) id target;
+@end
+@implementation FCFProxy
+
++ (intencetype)proxyWithTarget:(id) target {
+    FCFProxy * proxy = [FCFProxy alloc]; // NSProxy初始化没有init方法，直接alloc就行
+    proxy.target = target;
+    return proxy;
+}
+
+// 直接进入这个方法
+- (NSMethodSignature * ) methodSignatureForSelector:(SEL)sel {
     return [self.target methodSignatureForSelector:sel];
 }
-//指定当前消息的处理者
--(void)forwardInvocation:(NSInvocation * )invocation
-{
-    [invocation invokeWithTarget:self.target];
+- (void) forwardInvocation:(NSInvocation * )invocation {
+	[invocation invokeWithTarget: self.target];
 }
-//执行
-_ hzProxy = [FCFProxy alloc];
-//当前Proxy的target设为当前的self，因为真正要处理消息的其实是当前的viewcontroller（其实这个target就相当于delegate）
-_ hzProxy.target  = self;
-_ timer = [NSTimer scheduledTimerWithTimeInterval:1.0f target: _ hzProxy selector:@selector(fire) userInfo:nil repeats:YES]; 
-当前 _ timer的对象的处理就变成了 _ hzProxy。
+
+//解析： 理论和方案二是一样的
+_ timer = [NSTimer scheduledTimerWithTimeInterval:1.0f target:[FCFProxy proxyWithTarget:self] selector:@selector(fire) userInfo:nil repeats:YES]; 
+
+同样的，CADisplayLink也可以使用这种中间类的方式去解决循环引用问题。
+_ link = [CADisplayLink displayLinkWithTarget:[FCFProxy proxyWithTarget:self] selector:@selector(fire)];
+[ _ link addToRunLoop:[NSRunLoop mainRunLoop] forMode:NSDefaultRunLoopMode];
+
 ```
 
 [Block原理探究](https://cloud.tencent.com/developer/article/1517593)
