--- a/读书笔记/面试题精选/面练——各理论常考题.md
+++ b/读书笔记/面试题精选/面练——各理论常考题.md
@@ -325,5 +325,12 @@ Person和Student对象各占多少空间？
 	* 使用以上锁需要注意什么？
 	* 怎么实现自旋或互斥锁？ 
 
+### 内存管理
 
-s
+* 介绍下内存的几大区域
+* 使用CADisplayLink、NSTimer有什么注意点
+* 讲一下你对iOS内存管理的理解
+* Autorelease在什么时候会被释放
+* 方法里的局部对象，出了方法后会立即释放吗
+* ARC帮我们做了什么
+* weak指针的实现原理
