封装GCD定时器

--- a/读书笔记/iOS自学笔记/知识小集00 - OC基础.md
+++ b/读书笔记/iOS自学笔记/知识小集00 - OC基础.md
@@ -440,25 +440,45 @@ CFRunLoopRef 里包含一个pthread、一个currentMode、一个modes、一个co
 
 * runloop可以提升CPU效率，使其有事的时候做事，没事的时候休息；
 
-* NSTimer实际是根据runloop的CFRunLoopTimerRef来实现的，为了节省资源，默认情况下，NSTimer只能在DefaultMode下被回调，同时Timer有一个Tolerance (宽容度)标示了当前时间点可以有多少误差。，当屏幕滑动时，则就会暂停运行，所以需要通过commonMode的方案来解决。同理，这也导致系统默认的NSTimer不准。CADisplayLink则是一个和屏幕刷新率一致的定时器，但是它同样存在和NSTimer一样的问题。 所以要想要更精准的定时器，最好使用GCD或者Facebook 开源的 AsyncDisplayLink；
+* NSTimer实际是根据runloop的CFRunLoopTimerRef来实现的，为了节省资源，默认情况下，NSTimer只能在DefaultMode下被回调。当屏幕滑动时，定时器会暂停运行，所以需要通过commonMode的方案来解决。CADisplayLink则是一个和屏幕刷新率一致的定时器，但是它同样存在和NSTimer一样的问题。 所以要想要更精准的定时器，最好使用GCD或者Facebook 开源的 AsyncDisplayLink；
+
+  MJ：CADisplayLink和NSTimer底层都是基于runloop来实现的。如果RunLoop的任务过于繁重的话，就可能导致NSTimer不准时。（可以理解为RunLoop每进行一次loop循环，就会查看一下定时器，只有定时器累计时间超过1s才会触发。而RunLoop每次运行一周的任务是不确定的，导致运行时间是不固定的，所以跑完很多圈之后，时间可能并不一定是1s，有可能超过1秒。比如0.2+0.3+0.3+0.5 > 1.0 触发定时器）。
+
+  要使定时器准时，则可以使用GCD的定时器，GCD的定时器是直接跟系统内核挂钩的，所以是非常准时的。而且GCD的定时器，不会受runloop的任何影响，且可以在任何线程下使用。其次GCD创建的东西也不需要手动销毁（就像我们创建的队列也不用手动销毁一样）。
 
   ```
-  //
+  // 将NSTimer添加到commonModes里
   [[NSRunLoop currentRunLoop] addTimer:timer forMode:NSRunLoopCommonModes];
   
-  //GCD NSTimer
-  dispatch_queue_t queue = dispatch_get_global_queue(DISPATCH_QUEUE_PRIORITY_DEFAULT, 0);
-  dispatch_source_t timer = dispatch_source_creat(DISPATCH_SOURCE_TYPE_TIMER,0,0,queue);
-  dispatch_resumr(timer);
-  /* timer精度为0.1秒 */
-  dispatch_source_set_timer(timer,dispatch_timer(DISPATCH_TIME_NOW,1.0*NSEC_PER_SEC),1.0 * NSEC_PER_SEC, 0.1 * NSEC_PER_SEC);
-  dispatch_source_set_event_handler(timer, ^{
-  //定时回调了
-  if (!repeats) {
-  	//取消心跳后，移除定时器
-  	dispatch_source_cancel(timer);
+  //GCD NSTimer 
+  {
+      // 定时器执行的队列
+  	dispatch_queue_t queue = dispatch_queue(DISPATCH_QUEUE_PRIORITY_DEFAULT, 0);
+  	// 创建定时器
+  	dispatch_source_t timer = dispatch_source_creat(DISPATCH_SOURCE_TYPE_TIMER,0,0,queue);
+  	// 设置时间
+  	uint64_t start = 2.0;	// 2秒后开始执行
+  	uint64_t interval = 1.0; // 每隔1秒执行
+  	dispatch_source_set_timer(timer,
+  						dispatch_timer(DISPATCH_TIME_NOW,start * NSEC_PER_SEC),
+  						interval * NSEC_PER_SEC, 
+  						0);
+  	// 设置回调，block 回调形式
+  	dispatch_source_set_event_handler(timer, ^{
+  		//定时回调了
+  		NSLog(@"1111");
+  	});
+  	// 设置回调 ，函数形式
+  	// dispatch_source_event_handler_f(timer, timerFire);
+  
+  	//启动定时器
+  	dispatch_resumr(timer);
   }
-  });
+  
+  //定时器回调函数
+  void timerFire(void *param) {
+      NSLog(@"1111");
+  }
   
   ```
 
