内存管理——TaggedPointer二刷

--- a/读书笔记/iOS自学笔记/知识小集00 - OC基础.md
+++ b/读书笔记/iOS自学笔记/知识小集00 - OC基础.md
@@ -954,10 +954,52 @@ _ link = [CADisplayLink displayLinkWithTarget:[FCFProxy proxyWithTarget:self] se
 
 
 
-
 ### 内存管理
+
+#### 内存布局
+从低到高
+代码段——数据段(字符串常量-已初始化数据(一般指已初始化全局变量、静态变量等)-未初始化数据(一般指未初始化全局变量、静态变量等))——堆——栈——内核区
+
 #### 内存管理方案
-* **TaggedPointer**：对于一些小对象，比如NSNumber和NSDate。它实际上采用的是TaggedPointer的管理方式进行内存管理的，它是对象指针实际上不执行任何内存地址，而是直接将值存储在了指针本身里，该指针就被拆分成两部分，一部分是直接保存数据，另一部分是作为特殊标记。
+* **TaggedPointer**：对于一些小对象，比如NSNumber、NSDate、NSString。它有可能采用的是TaggedPointer的管理方式进行内存管理的，它是对象指针实际上不指向任何内存地址，而是直接将值存储在了指针本身里，该指针就被拆分成两部分，一部分是直接保存数据，另一部分是作为特殊标记。
+	* 注意1：这里说的小对象，指的是对象的值很小，正好可以使用指针位数放下。如果超过了指针的位数，则使用原来的存储方案。比如NSNumbber, 当数值很小时，采用的是TaggedPointer的方式，如果数值非常大，则就又会是普通的存储方式；
+	* 注意2：TaggedPointer技术不仅仅是内存方面的优化，使用上也会优化。比如对使用了TaggedPointer技术的对象发送消息时，objc_msgSend内部实际上也做了优化，它不会去走消息转发的流程，而是直接从TaggedPointer内取出它的值。比如：NSNumber *number = @10; [number intValue];
+	* 面试题1：下面代码会发生什么？为什么？
+		```
+		@property (nonatomic, copy) NSString * name;
+		
+		- (void)method1 {
+            dispatch_queue_t queue = dispatch_get_global_queue(0,0);
+            for (int i = 0; i < 10000; i++) {
+                dispatch_async(queue, ^{
+                    self.name = [NSString stringWithFormat@"abcdefghijklmn"];
+                });
+            }
+		}
+		
+		- (void)method2 {
+            dispatch_queue_t queue = dispatch_get_global_queue(0,0);
+            for (int i = 0; i < 10000; i++) {
+                dispatch_async(queue, ^{
+                    self.name = [NSString stringWithFormat@"abc"];
+                });
+            }
+		}
+		
+		//答案：method1会在for循环里崩溃。method2不会。
+		method1为什么会崩溃？首先字符串数值比较大，所以它不是TaggedPointer类型，而是直接的对象类型。给name赋值，实际上调用的是setter方法。setter方法底层的实现是：
+		-(void)setter:(NSString)name {
+            if (_name != name) {
+                [_name release]; //释放老值
+                _name = [name copy]; //赋值新值
+            }
+		}
+		在setter方法内部，多个线程同时访问，_name就有可能被重复release，从而导致崩溃。
+		解决方案：就是给self.name = [NSString stringWithFormat@"abcdefghijklmn"];前后加解锁。
+		method2不会产生崩溃。因为字符串数值比较小，它实际是一个TaggedPointer，所以给name赋值，不会调用setter方法，从而不会出现上面的问题。
+		所以这道题的本质就是TaggedPointer的区别。
+		```
+
 * **NONPOINTER_ISA**：在runtime章节中有提到isa是指向当前对象所属类的一个指针。一个结构体含有isa指针，那可以说明它是一个对象类型。实际上isa是对应一个isa_t的联合体，在64位架构下，它是由64个0和1的比特位组成。而实际上存储该对象所属类对象地址只需要用到大概33位，所以剩下的位数就可以用来存储其他的信息。
 	我们来看看NONPOINTER_ISA的基础数据结构：
 	* 第1位：是一个标志位，表示了它是否是一个非指针类型的isa，如果是0则说明它只是一个指针，内部的数据都是对应class的地址，如果是1则表示它是一个非指针类型的isa，内部数据只有部分用于存储class的地址；
